# pgbouncer-config-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-mit.md  README-ja.md  README.md
pgbouncer-config/: Cargo.toml
pgbouncer-config-derive/: Cargo.toml
pgbouncer-config-derive/src/: lib.rs
pgbouncer-config-parser/: Cargo.toml
pgbouncer-config-parser/src/: error.rs  lib.rs  template_parser.rs
pgbouncer-config-serde/src/: de.rs  error.rs  ser.rs  utils.rs
pgbouncer-config/src/: builder.rs  error.rs  lib.rs  pg_client.rs
pgbouncer-config/src/io/: mod.rs  read.rs  write.rs
pgbouncer-config/src/pgbouncer_config/: databases_setting.rs  mod.rs  pgbouncer_setting.rs
pgbouncer-config/src/utils/: diff.rs  mod.rs  parser.rs  ssh_tunnel.rs
pgbouncer-config/tests/: ini_parse.rs  io_roundtrip.rs  reader_tryfrom.rs  serde_roundtrip.rs
pgbouncer-generator/: Cargo.toml
pgbouncer-generator/src/: formatter.rs  main.rs
