[package]
name = "pgbouncer-config"
version = "0.1.0"
edition = "2024"
authors = ["SHIMA0111<shima@little-tabby.com>"]
description = "PgBouncer config file builder programmatically"
keywords = ["postgres", "pgbouncer", "configuration"]
repository = "https://github.com/SHIMA0111/pgbouncer-config-rs"

[dependencies]
# Error
thiserror = "2"

# Formatter
heck = "0.5"

# Structured/Parser
serde = { version = "1", features = ["derive"] }
typetag = "0.2"
toml = { version = "0.9", optional = true }
serde_json = { version = "1", optional = true }
regex = "1"

# Hash
md-5 = "0.10"

# DB
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }

# async/await
futures = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
default = []
diff = ["io"]
io = ["toml", "serde_json"]